Bad scaling and clipping of Save to PDF output [was: Erratic glyph spacing in Save As PDF output] on Windows
Categories
(Core :: Printing: Output, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | --- | fixed |
firefox82 | --- | fixed |
People
(Reporter: jfkthame, Assigned: jfkthame)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [print2020_v81][old-ui+])
Attachments
(4 files)
Looking at a PDF generated via Save As PDF on Windows, I'm seeing much inferior glyph spacing (some glyphs too crowded, others with gaps between) compared to the same document saved via Microsoft Print to PDF.
Assignee | ||
Comment 1•5 years ago
|
||
Assignee | ||
Comment 2•5 years ago
|
||
FWIW, I tried the same page on macOS, and the Save As PDF output looks much better there.
![]() |
||
Comment 3•5 years ago
|
||
Jonathan, how does this relate to bug 1662820?
Assignee | ||
Comment 4•5 years ago
|
||
Hmm, sounds like it may be the same thing. Leaving needinfo until I re-test this....
Assignee | ||
Comment 5•5 years ago
|
||
Trying to reproduce this, I'm now getting incorrectly scaled PDF output (looks fine in Preview but is oversized and clipped in the output). Most likely a regression from bug 1662820, I guess. :(
![]() |
||
Comment 6•5 years ago
|
||
Ugh, that got uplifted to beta 81. Presumably the output with print.tab_modal.enabled set to false has also been broken?
Assignee | ||
Comment 7•5 years ago
|
||
No, this only affects Save to PDF output, which isn't exposed as a destination via the old UI. So AFAICS that's not an issue.
![]() |
||
Comment 8•5 years ago
|
||
It is exposed via the Web Extensions API. We may have broken Save to PDF for dw-dev, for example.
Assignee | ||
Comment 9•5 years ago
|
||
Yes, I can confirm that Save As PDF from Print Edit WE is broken. I will test both a backout and a possible fix shortly (once my windows build is ready).
Assignee | ||
Comment 10•5 years ago
|
||
Confirmed that backing out bug 1662820 fixes the bad scaling of Save to PDF output (but reintroduces the bad glyph spacing, as seen both in preview and the actual PDF output).
The real fix is that we also need to update nsDeviceContextSpecWin::GetPrintingScale to reflect the DPI value we're using. Patch coming after one more re-test locally...
Updated•5 years ago
|
Assignee | ||
Comment 11•5 years ago
|
||
Updated•5 years ago
|
![]() |
||
Updated•5 years ago
|
Assignee | ||
Comment 12•5 years ago
|
||
![]() |
||
Updated•5 years ago
|
![]() |
||
Comment 13•5 years ago
|
||
Comment on attachment 9174673 [details]
Bug 1659527 - [for beta-81] Back out m-c changeset c7c18b456034 (bug 1662820) for regressing scaling in Save as PDF output. r=jwatt
Beta/Release Uplift Approval Request
- User impact if declined: Extensions that provide save-to-pdf functionality will create broken and clipped PDFs on Windows.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Backout. Reverts us to the previous code.
- String changes made/needed:
Comment 14•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 15•5 years ago
|
||
Comment on attachment 9174673 [details]
Bug 1659527 - [for beta-81] Back out m-c changeset c7c18b456034 (bug 1662820) for regressing scaling in Save as PDF output. r=jwatt
Approved for 81.0b9.
Comment 16•5 years ago
|
||
bugherder uplift |
Comment 17•5 years ago
|
||
bugherder |
Description
•