Bug 1659527 - Back out changeset 66856ed017c9 (bug 1662820) for regressing scaling in Save as PDF output. r=jwatt, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D89607